--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
 	"version": "0.0.1",
 	"dependencies": 
 	{
-		"socket.io": "x"
+		"socket.io": "*",
+		"express": "*"
 	},
 	"engines":
 	{
-		"node": "0.10.x",
-		"npm": "1.3.x"
+		"node": "0.10.*",
+		"npm": "1.3.*"
 	}
 }
